Fixed alignment of top right nav items

--- a/css/03-partials/header.scss
+++ b/css/03-partials/header.scss
@@ -300,7 +300,7 @@
 .header__quick-link {
     color: $color-RO_darkblue;
     position: absolute;
-    top: 38px;
+    top: 40px;
     right: 230px;
     min-width: 118px;
     font-weight: 800;
